fix alignment issue on identity widget
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@19687 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_identity.scss
+++ b/src/main/resources/scss/_identity.scss
@@ -3,12 +3,13 @@
 .x-component.identity {
 	position: absolute;
 	top: 10px;
-	right: 0;
+	right: -1px;
 	width: 70px;
 	z-index: 1000;
 
 	.undocked &{
 		top: 38px;
+		right: 0;
 	}
 
 	img.avatar{
